randonm images and on click

--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
+<h1>GAMBLER</h1>
 <body>
+    <header> BALANCE $<h2id="p-balance"></h2id></h2></header>
+    <!-- will be using p-balance to update the balance the the DOM -->
+
+
+    <main id="photos"> 
+        
+    </main>
+
+    <button id="betting"> Bet </button>
+
     
+    <span>
+        <!-- <footer class="firstfooter"><button>ADD FUNDS</button></footer>
+
+        <footer class="secondfooter"><button>WITHDRAW</button></footer> -->
+    </span>
+
 </body>
 </html>
