display message function achieved

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
-<h1>GAMBLER</h1>
+
 <body>
-    <header> BALANCE $<h2id="p-balance"></h2id></h2></header>
+    <h1>GAMBLER</h1>
+   
+   
+   
+    <header id="message">  Click the bet button below to start the game!! </header>
     <!-- will be using p-balance to update the balance the the DOM -->
 
 
@@ -18,9 +22,9 @@
         
     </main>
 
-    <button id="betting"> Bet </button>
+    <button id="betting"> BET </button>
 
-    
+
     <span>
         <!-- <footer class="firstfooter"><button>ADD FUNDS</button></footer>
 
