added sound to win or lose

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
 
     <button id="betting"> BET </button>
 
-
-    <span>
-        <!-- <footer class="firstfooter"><button>ADD FUNDS</button></footer>
-
-        <footer class="secondfooter"><button>WITHDRAW</button></footer> -->
-    </span>
+ <footer> 
+    <audio id="beat"> <source src="audio/cash-register-purchase-87313.mp3"></audio>
+    <audio id="lost"> <source src="audio/wrong-buzzer-6268.mp3"></audio>
+ </footer>
 
 </body>
 </html>
