ADDED STYLE WITH CSS

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <script defer src="js/main.js"></script>
 </head>
 
-<body>
+<body id="machine">
 
 
     <h1>GAMBLER</h1>
    
    
-    <header id="message">  Click the bet button below to start the game!! </header> <br>
+    <header id="message">  Click the bet button below to start the game!! </header> 
     
 
-    <main id="photos">  </main> <br>
+    <main id="photos">  </main> 
 
     
     <button id="betting"> 💰 BET 💰 </button>
