README file update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="js/main.js"></script>
 </head>
 
-<body id="machine">
+<body>
 
 
     <h1>GAMBLER</h1>
@@ -20,7 +20,7 @@
 
     <main id="photos">  
 
-        
+
     </main> 
 
     
